# iperfgtk

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
data/: io.github.iperf_rust.desktop
packaging/aur/: README.md
packaging/aur/iperfgtk-bin/: PKGBUILD
packaging/aur/iperfgtk-git/: PKGBUILD
src/: iperf.rs  main.rs  vumeter.rs  window.rs
